Created working delete button
The delete button now works on the info cards.

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -9,9 +9,9 @@
   <ion-navbar>
     <ion-title>My Contacts</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="addCard()">
-        <ion-icon name="add"></ion-icon>
-      </button>
+      <!--<button ion-button icon-only (click)="addCard()">-->
+        <!--<ion-icon name="add"></ion-icon>-->
+      <!--</button>-->
     </ion-buttons>
   </ion-navbar>
 
@@ -22,26 +22,20 @@
 
   <ion-item-group>
     <ion-item-divider color="light">A</ion-item-divider>
-    <ion-item>Archie</ion-item>
-    <ion-item>Ayla</ion-item>
+    <button ion-item>Archie</button>
+    <button ion-item>Ava</button>
   </ion-item-group>
 
   <ion-item-group>
     <ion-item-divider color="light">B</ion-item-divider>
-    <ion-item>Beatrice</ion-item>
-    <ion-item>Beau</ion-item>
+    <button ion-item>Brad</button>
+    <button ion-item>Ben</button>
   </ion-item-group>
 
   <ion-item-group>
     <ion-item-divider color="light">C</ion-item-divider>
-    <ion-item>Connie</ion-item>
-    <ion-item>Cylas</ion-item>
-  </ion-item-group>
-
-  <ion-item-group>
-    <ion-item-divider color="light">D</ion-item-divider>
-    <ion-item>Danny</ion-item>
-    <ion-item>Devon</ion-item>
+    <button ion-item>Cylas</button>
+    <button ion-item>Connie</button>
   </ion-item-group>
 
 </ion-content>
