Finished Final Project
Made it so my add, delete, and update map buttons work properly.

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -22,20 +22,28 @@
 
   <ion-item-group>
     <ion-item-divider color="light">A</ion-item-divider>
-    <button ion-item>Archie</button>
-    <button ion-item>Ava</button>
-  </ion-item-group>
-
-  <ion-item-group>
-    <ion-item-divider color="light">B</ion-item-divider>
-    <button ion-item>Brad</button>
-    <button ion-item>Ben</button>
+    <button ion-item>Agent Smith</button>
+    <button ion-item>Agent Jones</button>
   </ion-item-group>
 
   <ion-item-group>
     <ion-item-divider color="light">C</ion-item-divider>
-    <button ion-item>Cylas</button>
-    <button ion-item>Connie</button>
+    <button ion-item>Cypher</button>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider color="light">M</ion-item-divider>
+    <button ion-item>Morpheus</button>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider color="light">O</ion-item-divider>
+    <button ion-item>The Oracle</button>
+  </ion-item-group>
+
+  <ion-item-group>
+    <ion-item-divider color="light">T</ion-item-divider>
+    <button ion-item>Trinity</button>
   </ion-item-group>
 
 </ion-content>
