--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
 
-  <ion-card *ngFor="let map of maps">
+  <ion-card *ngFor="let map of maps | async">
     <!--<ion-card-header>Capt. Picard's Address</ion-card-header>-->
     <ion-card-content>
 
@@ -41,10 +41,10 @@
       </ion-item>
 
       <ion-item>
-        <button ion-button float-left large clear ion-button (click)="deleteCard(map)">
+        <button ion-button float-left large clear ion-button (click)="deleteMap(map)">
           <ion-icon name="ios-trash" color="danger"></ion-icon>
         </button>
-        <button ion-button float-right large clear ion-button (click)="updateCardDescription(map)">
+        <button ion-button float-right large clear ion-button (click)="updateMap(map)">
           <ion-icon name="clipboard" color="primary"></ion-icon>
         </button>
       </ion-item>
